--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
                 <button class="btn-right ms-3 d-flex justify-content-center align-items-center"> 
                     <span class="fw-bolder fs-5">Right</span>
                 </button>
-                <button class="bottom ms-3 d-flex justify-content-center align-items-center"> 
+                <button class="btn-bottom ms-3 d-flex justify-content-center align-items-center"> 
                     <span class="fw-bolder fs-5">Bottom</span>
                 </button>
-                <button class="left ms-3 d-flex justify-content-center align-items-center"> 
+                <button class="btn-left ms-3 d-flex justify-content-center align-items-center"> 
                     <span class="fw-bolder fs-5">Left</span>
                 </button>
             </div>
